--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <title>Viet Hung Nguyen | A web developer</title>
   </head>
   <body>
     <div id="app"></div>
